--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -7,61 +7,87 @@ import logoHappy from "../images/logo-happy-tail-grooming.webp";
 <Layout title="FAQ :: Happy Tail Grooming">
    <!-- Main -->
    <section id="main" class="container medium bg-links">
-      <header class="align-center">
-         <div class="logo">
-         <Image src={logoHappy} alt="Logo Happy Tail Grooming" width="250" />
-         </div>
-      </header>
       <div class="box">
-       
+         <header class="align-center">
+            <div class="logo">
+            <Image src={logoHappy} alt="Logo Happy Tail Grooming" width="200" />
+            </div>
+         </header>
+
+         <div class="block align-center">
+
+            <p><small>SC: Fort Mill, Indian land and Rock Hill.</small></p>
+            <p><small>NC: Ballantine, Pineville, Waxhaw, Piper Glen, Matthews and Providence. </small></p>
+         </div>
+         
          <ul class="links">
             <li>
    
                <a
                href="/"
                class="button primary fit"
-               target="_blank">Website</a
+               target=""><i class="icon fa-solid fa-globe"></i>Visit our website</a
                >
             </li>
    
             <li>
    
                <a
-               href="#"
+               href="https://booking.moego.pet/ol/landing?name=HappyTailgroomingLLC"
                class="button primary fit"
-               target="_blank">Facebook</a
+               target="_blank"><i class="icon fa-solid fa-calendar-check"></i>Book an appointment</a
                >
             </li>
-            <li>   
+            <!-- <li>   
                <a
                href="#"
                class="button primary fit"
-               target="_blank">Instagram</a
+               target="_blank"><i class="icon fa-solid fa-star"></i>What our clients say?</a
                >
-            </li>
+            </li> -->
+            
             <li>   
                <a
-               href="#"
+               href="mailto:info@happytailgrooming.com"
                class="button primary fit"
-               target="_blank">Reviews</a
-               >
-            </li>
-            <li>   
-               <a
-               href="#"
-               class="button primary fit"
-               target="_blank">Email Us</a
+               target="_blank"><i class="icon fa-solid fa-envelope"></i>Email Us</a
                >
             </li>
          </ul>
 
 		</div>
 
+       <ul class="icons align-center">
+         <li>
+            <a
+               href="https://www.facebook.com/profile.php?id=61561424875308"
+               class="icon brands fa-facebook-f"
+               target="_blank"><span class="label">Facebook</span></a
+            >
+         </li>
+         <li>
+            <a
+               href="https://www.instagram.com/happytail_grooming"
+               class="icon brands fa-instagram"
+               target="_blank"
+               ><span class="label">Instagram</span></a
+            >
+         </li>
+      </ul>
+
 
    </section>
 </Layout>
 
 <style>
+
+   #main {
+      padding: 0;
+   }
+
+   .bg-links .box {
+      padding: 1.5rem !important;
+   }
 
    .links {
       list-style: none;
@@ -72,8 +98,31 @@ import logoHappy from "../images/logo-happy-tail-grooming.webp";
       margin-bottom: 1.4rem;
    }
 
+   .links a {
+   }
+   
    .image img {
       max-width: 100%;
       height: auto;
+   }
+
+   .button {
+      padding: 0 3rem;
+      height: 4rem;
+      line-height: 4rem;
+      font-size: 1.2rem;
+   }
+   
+   small {
+      font-size: small;
+   }
+   
+   .block {
+      margin: 1rem 2rem;
+   }
+   
+   .links .icon::before {
+      margin-right: .5rem;
+      color: #E85091;
    }
 </style>
