link services + cred3

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,14 @@ import southLogo from "../images/south-ca__.jpg";
 import cred0 from "../images/credentials0.webp";
 import cred1 from "../images/credentials1.webp";
 import cred2 from "../images/credentials2.webp";
+import cred3 from "../images/credentials3.webp";
 import publiModal from "../images/publi-modal.webp";
 import Modal from "../components/Modal.astro";
 
 import picCathe from "../images/catherine-toro-owner.webp";
 ---
 
-<Layout title="Home Happy Tail Grooming">
+<Layout title="Home Happy Tail Grooming" description="Happy Tail Grooming is a family owned and operated mobile grooming business which is solely dedicated to providing the best services available to our clients">
 	<!-- Banner -->
 	<section id="banner">
 		<div class="logo">
@@ -143,10 +144,13 @@ import picCathe from "../images/catherine-toro-owner.webp";
 
 					<div class="credentials">
 						<figure class="image">
-							<Image src={cred2} alt="" width="350" />
+							<Image src={cred0} alt="" width="200" />
 						</figure>
 						<figure class="image">
-							<Image src={cred0} alt="" width="200" />
+							<Image src={cred2} alt="" width="300" />
+						</figure>
+						<figure class="image">
+							<Image src={cred3} alt="" width="260" />
 						</figure>
 						<figure class="image">
 							<Image src={cred1} alt="" width="350" />
