--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -38,13 +38,13 @@ import logoHappy from "../images/logo-happy-tail-grooming.webp";
                target="_blank"><i class="icon fa-solid fa-calendar-check"></i>Book an appointment</a
                >
             </li>
-            <!-- <li>   
+            <li>   
                <a
-               href="#"
+               href="/services"
                class="button primary fit"
-               target="_blank"><i class="icon fa-solid fa-star"></i>What our clients say?</a
+               target="_blank"><i class="icon fa-solid fa-paw"></i>Our Services</a
                >
-            </li> -->
+            </li>
             
             <li>   
                <a
