--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,11 @@
 ---
 interface Props {
-	title: string;
+	title: string,
+	description: string;
 }
 
-const { title } = Astro.props;
+let { title, description } = Astro.props;
+if(!description) description = "We Pamper your pet because their deserve it"
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "@fontsource/chewy";
@@ -22,7 +24,7 @@ const isLinks = Astro.url.pathname.includes('links')
 	<head>
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RYM04B5MBL"></script>
-		<script>
+		<script is:inline>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
@@ -39,8 +41,8 @@ const isLinks = Astro.url.pathname.includes('links')
 		/>
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 
-		<meta name="title" content="Happy Tail Grooming" />
-		<meta name="description" content="We Pamper your pet because their deserve it" />
+		<meta name="title" content={title} />
+		<meta name="description" content={description} />
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
