--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -5,9 +5,10 @@
          <a href="/services">Services</a>
 
       </li>
-      <li><a href="/faq.html">FAQs</a></li>
-      <li><a href="/gallery.html">Gallery</a></li>
-      <li><a href="/contact.html">Contact Us</a></li>
+      <li><a href="/faq">FAQs</a></li>
+      <li><a href="/gallery">Gallery</a></li>
+      <li><a href="/blog">Blog</a></li>
+      <li><a href="/contact">Contact Us</a></li>
       <li><a href="/booking" class="button">Book Now</a></li>
    </ul>
 </nav>
