--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -7,7 +7,7 @@
       </li>
       <li><a href="/faq">FAQs</a></li>
       <li><a href="/gallery">Gallery</a></li>
-      <li><a href="/blog">Blog</a></li>
+      <!-- <li><a href="/blog">Blog</a></li> -->
       <li><a href="/contact">Contact Us</a></li>
       <li><a href="/booking" class="button">Book Now</a></li>
    </ul>
