--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -22,7 +22,7 @@ const { Content } = await entry.render();
     </header>
 
     <div class="box">
-         <span class="image featured"><img src={entry.data.image.url} alt={entry.data.image.alt} /></span>
+         <span class="image featured"><img src={entry.data.image} /></span>
          <Content />
          </div>
 
