Update Blog “2024-09-03-testy-0”

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -9,7 +9,7 @@ const blogEntries = await getCollection('posts');
 
 ---
 
-<Layout title="FAQ :: Happy Tail Grooming">
+<Layout title="Blog :: Happy Tail Grooming">
    <!-- Main -->
    <section id="main" class="container medium bg-wave">
       <header>
