Create Blog “grooming-your-pets”

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ const isLinks = Astro.url.pathname.includes('links')
 			name="viewport"
 			content="width=device-width, initial-scale=1, user-scalable=no"
 		/>
-		<link rel="shortcut icon" href="favicon.png" type="image/png">
+		<link rel="shortcut icon" href="/favicon.png" type="image/png">
 
 		<meta name="title" content={title} />
 		<meta name="description" content={description} />
