blog sin borradores

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,7 +5,9 @@ import banner from "../images/banner-faq.webp";
 
 
 import { getCollection } from 'astro:content';
-const blogEntries = await getCollection('posts');
+const blogEntries = await getCollection('posts',  ({ data }) => {
+  return data.draft !== true
+})
 
 ---
 
