--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,6 +165,16 @@ import picCathe from "../images/catherine-toro-owner.webp";
 				</section>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col-12">
+				<section class="box special">
+					<div class="embedsocial-widget" data-ref="a3c1d7abbbb930fb8dc8bbc1ba89bf8c"> <a href="https://embedsocial.com/google-reviews-widget/" title="Add Google reviews on a website" target="_blank" class="powered-by-es es-slider" > <img src="https://embedsocial.com/cdn/icon/embedsocial-logo.webp" alt="EmbedSocial" > <span> Google reviews widget </span> </a> </div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/aht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialWidgetScript")); </script>
+				</section>
+			</div>
+		</div>
+
+
 	</section>
 
 	<Modal id="dialog" open="Open modal">
