--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -51,7 +51,7 @@ const { id, open } = Astro.props;
 
 <style lang="scss">
    dialog {
-      // position: fixed;
+      position: fixed;
       // left: 50%;
       // top: 50%;
       // transform: translate(-50%, -50%);
