--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -2,7 +2,7 @@
    <div class="col-12">
       <section class="box special">
 
-         <h3>Our Google reviews</h3>
+         <h3>What clients say</h3>
 
          <br>
 
