--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -52,12 +52,9 @@ const { id, open } = Astro.props;
 <style lang="scss">
    dialog {
       position: fixed;
-      // left: 50%;
-      // top: 50%;
-      // transform: translate(-50%, -50%);
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
       border: 0;
       padding: 1rem;
       border-radius: 12px;
