--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -33,6 +33,18 @@
                   <span class="icon fa-solid fa-star"></span>
                </div>
             </div>
+
+            <div class="item-carousel">
+               <p><span class="icon fa-solid fa-quote-left"></span>Catherine knows exactly how to take care of my Goldendoodle. She has been grooming her for 3 years now. I feel very relieved to have someone so talented and loving taking care of my dog. I am always surprise to see Sahara (pictured attached) after her grooming as she always comes out looking more beautiful with pretty bows and/or scarfs.<span class="icon fa-solid fa-quote-right"></span></p>
+               <h4>Dinery Dehart</h4>
+               <div class="stars">
+                  <span class="icon fa-solid fa-star"></span>
+                  <span class="icon fa-solid fa-star"></span>
+                  <span class="icon fa-solid fa-star"></span>
+                  <span class="icon fa-solid fa-star"></span>
+                  <span class="icon fa-solid fa-star"></span>
+               </div>
+            </div>
          </div>
 
          <br>
