--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,8 @@ import ViewTransitions from "astro/components/ViewTransitions.astro";
 
 const isHome = Astro.url.pathname == "/";
 const isLinks = Astro.url.pathname.includes('links')
+
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
 
 <!doctype html>
@@ -45,6 +47,9 @@ const isLinks = Astro.url.pathname.includes('links')
 
 		<meta name="title" content={title} />
 		<meta name="description" content={description} />
+
+		<!-- Canonical URL -->
+		<link rel="canonical" href={canonicalURL} />
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
