--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -132,7 +132,7 @@ import "flickity/dist/flickity.min.css";
 					</figure>
 					<h3>North Carolina</h3>
 					<p>
-						Ballantine, Pineville, Waxhaw, Piper Glen, Matthews and
+						Ballantyne, Pineville, Waxhaw, Piper Glen, Matthews and
 						Providence.
 					</p>
 				</section>
