--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -17,7 +17,7 @@ import logoHappy from "../images/logo-happy-tail-grooming.webp";
          <div class="block align-center">
 
             <p><small>SC: Fort Mill, Indian land and Rock Hill.</small></p>
-            <p><small>NC: Ballantine, Pineville, Waxhaw, Piper Glen, Matthews and Providence. </small></p>
+            <p><small>NC: Ballantyne, Pineville, Waxhaw, Piper Glen, Matthews and Providence. </small></p>
          </div>
          
          <ul class="links">
