--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -8,11 +8,11 @@ import fullgroom from "../images/full-groom.webp";
 import alacarte from "../images/a-la-carte.webp";
 ---
 
-<Layout title="Services :: Happy Tail Grooming">
+<Layout title="Services :: Happy Tail Grooming" description="Mobile Pet Grooming Services South Carolina, North Carolina">
    <!-- Main -->
    <section id="main" class="container medium bg-wave">
       <header>
-         <h2>Mobile Services</h2>
+         <h2>Mobile Dog Grooming Services</h2>
       </header>
 
       <section class="box features">
