--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,32 +1,41 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Image from "astro/components/Image.astro";
-import pic1 from "./../images/gallery/pic (1).jpg";
-import pic2 from "./../images/gallery/pic (2).jpg";
-import pic3 from "./../images/gallery/pic (3).jpg";
-import pic4 from "./../images/gallery/pic (4).jpg";
-import pic5 from "./../images/gallery/pic (5).jpg";
-import pic6 from "./../images/gallery/pic (6).jpg";
-import pic7 from "./../images/gallery/pic (7).jpg";
-import pic8 from "./../images/gallery/pic (8).jpg";
-import pic9 from "./../images/gallery/pic (9).jpg";
-import pic10 from "./../images/gallery/pic (10).jpg";
-import pic11 from "./../images/gallery/pic (11).jpg";
-import pic12 from "./../images/gallery/pic (12).jpg";
-import pic13 from "./../images/gallery/pic (13).jpg";
-import pic14 from "./../images/gallery/pic (14).jpg";
-import pic15 from "./../images/gallery/pic (15).jpg";
-import pic16 from "./../images/gallery/pic (16).jpg";
-import pic17 from "./../images/gallery/pic (17).jpg";
-import pic18 from "./../images/gallery/pic (18).jpg";
-import pic19 from "./../images/gallery/pic (19).jpg";
-import pic20 from "./../images/gallery/pic (20).jpg";
-import pic21 from "./../images/gallery/pic (21).jpg";
-import pic22 from "./../images/gallery/pic (22).jpg";
-import pic23 from "./../images/gallery/pic (23).jpg";
-import pic24 from "./../images/gallery/pic (24).jpg";
-import pic25 from "./../images/gallery/pic (25).jpg";
-import pic26 from "./../images/gallery/pic (26).jpg";
+import pic1 from "./../images/gallery/mobile-dog-grooming (1).jpg";
+import pic2 from "./../images/gallery/mobile-dog-grooming (2).jpg";
+import pic3 from "./../images/gallery/mobile-dog-grooming (3).jpg";
+import pic4 from "./../images/gallery/mobile-dog-grooming (4).jpg";
+import pic5 from "./../images/gallery/mobile-dog-grooming (5).jpg";
+import pic6 from "./../images/gallery/mobile-dog-grooming (6).jpg";
+import pic7 from "./../images/gallery/mobile-dog-grooming (7).jpg";
+import pic8 from "./../images/gallery/mobile-dog-grooming (8).jpg";
+import pic9 from "./../images/gallery/mobile-dog-grooming (9).jpg";
+import pic10 from "./../images/gallery/mobile-dog-grooming (10).jpg";
+import pic11 from "./../images/gallery/mobile-dog-grooming (11).jpg";
+import pic12 from "./../images/gallery/mobile-dog-grooming (12).jpg";
+import pic13 from "./../images/gallery/mobile-dog-grooming (13).jpg";
+import pic14 from "./../images/gallery/mobile-dog-grooming (14).jpg";
+import pic15 from "./../images/gallery/mobile-dog-grooming (15).jpg";
+import pic16 from "./../images/gallery/mobile-dog-grooming (16).jpg";
+import pic17 from "./../images/gallery/mobile-dog-grooming (17).jpg";
+import pic18 from "./../images/gallery/mobile-dog-grooming (18).jpg";
+import pic19 from "./../images/gallery/mobile-dog-grooming (19).jpg";
+import pic20 from "./../images/gallery/mobile-dog-grooming (20).jpg";
+import pic21 from "./../images/gallery/mobile-dog-grooming (21).jpg";
+import pic22 from "./../images/gallery/mobile-dog-grooming (22).jpg";
+import pic23 from "./../images/gallery/mobile-dog-grooming (23).jpg";
+import pic24 from "./../images/gallery/mobile-dog-grooming (24).jpg";
+import pic25 from "./../images/gallery/mobile-dog-grooming (25).jpg";
+import pic26 from "./../images/gallery/mobile-dog-grooming (26).jpg";
+import pic27 from "./../images/gallery/mobile-dog-grooming (27).jpg";
+import pic28 from "./../images/gallery/mobile-dog-grooming (28).jpg";
+import pic29 from "./../images/gallery/mobile-dog-grooming (29).jpg";
+import pic30 from "./../images/gallery/mobile-dog-grooming (30).jpg";
+import pic31 from "./../images/gallery/mobile-dog-grooming (31).jpg";
+import pic32 from "./../images/gallery/mobile-dog-grooming (32).jpg";
+import pic33 from "./../images/gallery/mobile-dog-grooming (33).jpg";
+import pic34 from "./../images/gallery/mobile-dog-grooming (34).jpg";
+import pic35 from "./../images/gallery/mobile-dog-grooming (35).jpg";
 ---
 
 <Layout title="Gallery :: Happy Tail Grooming">
@@ -167,6 +176,53 @@ import pic26 from "./../images/gallery/pic (26).jpg";
                <Image src={pic26} alt="" />
             </a>
          </div>
+         <div class="image">
+            <a href={pic27.src} data-lightbox="gallery">
+               <Image src={pic27} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic28.src} data-lightbox="gallery">
+               <Image src={pic28} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic29.src} data-lightbox="gallery">
+               <Image src={pic29} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic30.src} data-lightbox="gallery">
+               <Image src={pic30} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic31.src} data-lightbox="gallery">
+               <Image src={pic31} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic32.src} data-lightbox="gallery">
+               <Image src={pic32} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic33.src} data-lightbox="gallery">
+               <Image src={pic33} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic34.src} data-lightbox="gallery">
+               <Image src={pic34} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic35.src} data-lightbox="gallery">
+               <Image src={pic35} alt="" />
+            </a>
+         </div>
+         
+
       </div>
    </section>
 </Layout>
