--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,7 +15,7 @@ const blogEntries = await getCollection('posts',  ({ data }) => {
    <!-- Main -->
    <section id="main" class="container medium bg-wave blog">
       <header>
-         <h2>Latest articles</h2>
+         <h2>Latest Articles</h2>
       </header>
       
       <div class="row">
