--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -8,7 +8,7 @@ import banner from "../images/banner-faq.webp";
    <!-- Main -->
    <section id="main" class="container medium bg-wave">
       <header>
-         <h2>FREQUENTLY ASKED QUESTIONS</h2>
+         <h2>Frequently Asked Questions</h2>
       </header>
       <div class="box">
          <span class="image featured"><Image src={banner} alt="FAQs" /></span>
